# Orderly-foods-main-engine

./: .env.example  README.md  pyproject.toml
app/: __init__.py  main.py
app/core/: celery.py
app/core/events/: __init__.py  event_bus.py
app/models/: __init__.py  customer_intelligence.py  knowledge_base.py
app/services/: __init__.py
app/services/ai/: __init__.py  decision_engine.py  knowledge_engine.py  prompt_engine.py
app/tasks/: customer_intelligence.py
app/workers/: __init__.py  order_completed_consumer.py
tests/unit/: test_event_bus_contract.py  test_prompt_engine.py
